# SkyeViewer-Public

./: CMakeLists.txt  README.md  main1.cpp  resource.h  resource.rc
.github/workflows/: windows-build.yml
